--- a/personal-automation/pyproject.toml
+++ b/personal-automation/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "fastmcp>=2.8.1",
     "google-api-python-client>=2.172.0",
+    "google-auth-oauthlib>=1.2.2",
     "humanlayer>=0.7.9",
     "lilypad-sdk[anthropic,openai]>=0.8.1",
     "mirascope[anthropic,openai,tenacity]>=1.25.1",
